# OpenConch

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  claude_agent.py
openconch/: __init__.py  config.py  embeddings.py  episodic.py  history.py  llm.py  memory.py  router.py  scorer.py  utils.py  vector_store.py
stratum/: .gitignore  README.md  pyproject.toml
stratum/configs/: exp1_oracle.yaml  exp2_scorer.yaml  exp3_e2e.yaml
stratum/data/: __init__.py  passkey.py  ruler_lite.py
stratum/eval/: __init__.py  harness.py
stratum/experiments/: __init__.py
stratum/experiments/exp1_oracle/: __init__.py  run.py
stratum/experiments/exp2_scorer/: __init__.py  run.py
stratum/experiments/exp3_e2e/: __init__.py  run.py
stratum/models/: __init__.py
stratum/models/anchor_attention/: __init__.py  attention.py
stratum/models/episodic_memory/: __init__.py  memory.py
stratum/models/fusion/: __init__.py  gate.py
stratum/models/mamba_backbone/: __init__.py  backbone.py
stratum/models/salience_scorer/: __init__.py  scorer.py
stratum/scripts/: run_all.sh  setup_gpu.sh
tests/: test_memory.py
web/: package-lock.json  package.json
web/.claude/: launch.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/memories/: route.ts
web/components/: Chat.tsx  MemoryPanel.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx
web/lib/: memory.ts  scorer.ts  store.ts  types.ts
