[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openconch"
version = "0.1.0"
description = "OpenConch: Episodic memory for AI agents. Remember everything. Retrieve faithfully."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
mamba = [
    "torch>=2.1.0",
    "mamba-ssm>=2.0.0",
    "causal-conv1d>=1.2.0",
    "flash-attn>=2.5.0",
    "einops>=0.7.0",
    "transformers>=4.38.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
all = ["openconch[mamba,qdrant,dev]"]

[tool.setuptools.packages.find]
include = ["openconch*", "stratum*"]
